# Chatapp

./: README.md  main.py  pyproject.toml  schema.graphql
api/: config.py  main.py  queries.py
api/bootstrap/: load_graphql_schemas.py
api/graphql/: graphql.py
api/routers/v1/: GraphqlRouter.py
api/schemas/: graphql_schemas.py  schema.graphql
api/user/: abstracts.py  data_source.py  helpers.py  mutations.py  orm.py  resolvers.py
api/user/schemas/: schema.graphql
